Wed Oct 20 16:07:09 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Timer_Queue_Adapters.cpp (ACE_Thread_Timer_Queue_Adapter::svc):
        * ace/Timer_Queue_T.cpp (expire):
          Temporarily release and reacquire the mutex around timer dispatch.
          This prevents a deadlock on user code with multiple threads doing
          timer-related operations.

Thu Sep 02 11:18:34 EDT 2010  Steve Huston  <shuston@riverace.com>

	* ACE version 5.7b released.

Thu Sep  2 14:59:27 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (handle_ready):
        * ace/SOCK_Dgram.cpp:
        * ace/SOCK_IO.cpp:
        * tests/MT_SOCK_Test.cpp:
        * tests/SOCK_Test.cpp: Reverted the changes from
          Wed Sep  1 19:31:24 UTC 2010  Steve Huston  <shuston@riverace.com>
          They caused other problems with existing usage. The referenced
          TAO test behind the problems needs to be fixed, not ACE.

Wed Sep  1 19:31:24 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (handle_ready): Changed the timeout behavior to just
          return 0, no errno, as ACE_OS::poll() and ACE_OS::select() both do.
          This restores historic behavior changed inadvertently at
          Fri Aug 27 19:17:11 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_Dgram.cpp:
        * ace/SOCK_IO.cpp:
        * tests/MT_SOCK_Test.cpp:
        * tests/SOCK_Test.cpp: Re-added the if/switch on return value from
          ACE::handle_read|write_ready() to detect timeout and set errno
          here.

          These changes were necessary to fix the TAO faults test. Thanks
          to Johnny and Simon for narrowing down the cause and testing
          the fix.

Mon Aug 30 16:48:34 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/FIFO.h:
        * ace/FIFO_Recv.h:
        * ace/FIFO_Send.h: Clarified initialization and open behavior.

Fri Aug 27 19:17:11 UTC 2010  Steve Huston  <shuston@riverace.com>
